[gd_scene load_steps=22 format=4 uid="uid://csb3rp0raacor"]

[ext_resource type="PackedScene" uid="uid://dpv577npmrp1n" path="res://test/enemy/character-skeleton.glb" id="1_2xcuc"]
[ext_resource type="Script" path="res://Unit/Enemy/StateEnemy/enemy_state_test_02.gd" id="2_ughar"]
[ext_resource type="PackedScene" uid="uid://dusiu08hxrxug" path="res://Unit/VisualEffect/hurt_particle_01.tscn" id="3_ijtr6"]
[ext_resource type="PackedScene" uid="uid://begv2uphnjvod" path="res://Unit/VisualEffect/blood_taril.tscn" id="4_6fqyk"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="4_bvk6h"]
[ext_resource type="Material" uid="uid://bxq6cpve47gtv" path="res://Unit/VisualEffect/hitflash_material.tres" id="5_nnl5c"]
[ext_resource type="PackedScene" uid="uid://tpmr0gct8ek1" path="res://Unit/VisualEffect/floting_text.tscn" id="6_2x2sf"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="6_ui25h"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="7_8rdi8"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="8_1qtkq"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="9_uv1e1"]
[ext_resource type="PackedScene" uid="uid://b4upnpxawoc68" path="res://test/player/health_component.tscn" id="10_n66am"]
[ext_resource type="PackedScene" uid="uid://dr64grqi6yu8m" path="res://Unit/DropItem/normal_item_spwaner.tscn" id="11_va31a"]
[ext_resource type="PackedScene" uid="uid://uhrre7e7bf2s" path="res://Unit/DropItem/drop_normal_item_coins.tscn" id="12_vl4jd"]
[ext_resource type="Texture2D" uid="uid://c166yt8qgsmq3" path="res://test/attack/food model/GLB format/Textures/colormap.png" id="14_24n2q"]
[ext_resource type="Texture2D" uid="uid://dyjllxgpbhgll" path="res://test/enemy/caution_sign.png" id="16_neymm"]
[ext_resource type="Script" path="res://test/StateTest/hit_player_ray_cast.gd" id="18_ejus3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xru77"]
resource_name = "colormap"
cull_mode = 2
albedo_texture = ExtResource("14_24n2q")
texture_filter = 2

[sub_resource type="ArrayMesh" id="ArrayMesh_2rcrt"]
_surfaces = [{
"aabb": AABB(-0.084846, 0, -0.084846, 0.169692, 0.142664, 0.169692),
"format": 34896613377,
"index_count": 396,
"index_data": PackedByteArray("AgAAAAEAAQADAAIABgAEAAUABQAHAAYACQAIAAYABgAHAAkACQAKAAsACwAIAAkADAAAAAIAAgANAAwACgAMAA0ADQALAAoAAwABAA4ADgAPAAMADQACAAMAAwALAA0AAwAPAAsADwAIAAsADwAEAAgABAAGAAgADwAOAAUABQAEAA8AEAAAAAwADAARABAAEgAOAAEAAQATABIAEAATAAEAAQAAABAAFAAFAA4ADgASABQAEQAMAAoACgAVABEABQAUABYAFgAHAAUACQAHABYAFgAXAAkAFQAKAAkACQAXABUAGAAUABIAEgAZABgAGgAVABcAFwAbABoAFgAcABsAGwAXABYAHgAdABoAGgAfAB4AGQAgACEAIQAiABkAGAAZACIAIgAjABgAJQAkAB0AHQAeACUAIAAkACUAJQAhACAAJwAmABsAGwAcACcAFgAUABgAGAAcABYAGAAjACcAJwAcABgAHQARABUAFQAaAB0AHwAaABsAGwAmAB8AIAATABAAEAAkACAAHQAkABAAEAARAB0AGQASABMAEwAgABkAIQAlAB4AHgAiACEAHgAoACIAKAApACIAKgAoAB4AHgAfACoAKQAjACIAHwArACoAKQArACMAHwAmACsAJgAjACsAJgAnACMALgAsAC0ALAAuAC0AMQAvADAALwAxADAANAAyADMAMgA0ADMANwA1ADYANQA3ADYAOAAqACsAKwA5ADgAOAA6ACgAKAAqADgAOwApACgAKAA6ADsAKwApADsAOwA5ACsAPgA8AD0APQA/AD4AQQBAADwAPAA+AEEAQwBCAEAAQABBAEMAPQBCAEMAQwA/AD0AQwBBAD4APgA/AEMANwA5ADsAOwA1ADcAOQA3ADsANQA7ADcAOAAuAC0ALQA6ADgALgA4AC0AOgAtADgAOwA6ADMAMwAyADsAOgA7ADMAMgAzADsALwA4ADkAOQAwAC8AOAAvADkAMAA5AC8AQABCADsAQgA9ADsAQAA7ADoAOQA7AD0AOgA4AEAAOQA9ADwAOAA5ADwAPABAADgA"),
"lods": [0.0302557, PackedByteArray("AgAQAA4AEAAgAA4AIgAOACAADgAiABgAGAAFAA4AFgAFABgABQAWAAYABgAWAAoABgAOAAUAFgAbAAoADgAGAAIAAgAGAAoACgAQAAIAFgAYABsAGwAYACsAGAApACsAIgApABgAKAApACIAHgArACgAHgAoACIAGwArAB4AHgAiACAAEAAeACAAEAAKAB4ACgAbAB4AMQAvADAAOQAwAC8ALwA4ADkAOAAuAC0ALQA6ADgAOwA6ADMANwA5ADsAMwAyADsANAAyADMAOwA1ADcANwA1ADYALwAxADAAMAA5AC8AOAAvADkALgA4AC0AOgAtADgAOgA7ADMAOQA3ADsAMgAzADsAMgA0ADMANQA7ADcANQA3ADYAOAAoACsAOAA6ACgAKwA5ADgAKAA6ADsAOwA5ACsAOwApACgAKwApADsAPgBAAD0AQwA9AEAAQAA+AEMAQwA+AD0AQAA9ADsAQAA7ADoAOgA4AEAAPQBAADgAOAA5AD0AOQA7AD0A"), 0.0352713, PackedByteArray("AgAQAA4ADgAWAAIAAgAWAAoACgAQAAIAFgAbAAoADgAoABYAKAApABYAGwArACgAGwAWACsAFgApACsACgAbACgAEAAKACgAKAAOABAAOAAoACsAOAA6ACgAKwA5ADgAKAA6ADsAOwA5ACsAOwApACgAKwApADsANwA5ADsALwA4ADkAOwA6ADMALQA6ADgAOQA3ADsAOgA7ADMAOAAvADkAOgAtADgAPQA7ADoAOQA7AD0AOAA5AD0AOgA4AD0A"), 0.070132, PackedByteArray("KwA5ADgAOwA5ACsAOAA6ACsAKwA6ADsANwA5ADsALwA4ADkAOwA6ADMALQA6ADgAOQA3ADsAOgA7ADMAOAAvADkAOgAtADgAPQA7ADoAOQA7AD0AOAA5AD0AOgA4AD0A")],
"name": "colormap",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 68,
"vertex_data": PackedByteArray("QuvfIv9/AADXy98iJzQAAIHHAAD/fwAAj7IAAG9NAABvTQAAb00AACc03yInNAAAfTgAAP9/AAC8FN8i/38AAG9NAACPsgAAJzTfItfLAAD/f98iQusAAP9/AACBxwAA18vfItfLAACPsgAAj7IAAP9/3yK8FAAA/38AAH04AAD//51o/38AAIHanWiB2gAA/3+daAAAAACB2p1ofSUAAH0lnWh9JQAA/3+daP//AAAAAJ1o/38AAH0lnWiB2gAAJzRcric0AAD/f1yuvBQAAP9/XK5C6wAAJzRcrtfLAAC8FFyu/38AANfLXK7XywAAj7I70Y+yAAD/fzvRgccAANfLXK4nNAAAj7I70W9NAAD/fzvRfTgAAG9NO9FvTQAAQutcrv9/AACBxzvR/38AAG9NO9GPsgAAfTg70f9/AADfkTvRH24AAB9uO9EfbgAA35E70d+RAAAfbjvR35EAAKPB////fwAABKwi5Cd0AAAErCLk14sAANeLIuQErAAAJ3Qi5ASsAAD/f///o8EAACd0IuT6UwAA14si5PpTAAD/f///Wz4AAPpTIuQndAAAWz7///9/AAD6UyLk14sAAN+RNNrfkQAAH2402t+RAADfkTTaH24AAB9uNNofbgAAdYo02nWKAACJdTTadYoAAGGGovdhhgAAnXmi92GGAAB1ijTaiXUAAGGGovedeQAAiXU02ol1AACdeaL3nXkAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_dukcy"]
resource_name = "tomato_tomato"
_surfaces = [{
"aabb": AABB(-0.084846, 0, -0.084846, 0.169692, 0.142664, 0.169692),
"attribute_data": PackedByteArray("//efsv/3n7L/95i5//eYuf/3mLn/95+y//eYuf/3n7L/95i5//eYuf/3n7L/95+y//efsv/3mLn/95+y//eYuf/3n7L/95i5//efsv/3mLn/95+y//eYuf/3n7L/95i5//efsv/3n7L/95i5//eYuf/3mLn/95i5//eYuf/3mLn/95i5//eYuf/3mLn/95i5//efsv/3n7L/95i5//eYuf/3n7L/95+y//espP/3rKT/95+y//efsv/3rKT/96yk//espP/3n7L/96yk//efsv/3n7L/95+y//espP/3rKT/95+y//efsv/3rKT/96yk//espP/3rKT/95+y//efsv/3n7L/96yk//efsv/3rKT/95+y//efsv/3rKT/96yk//espP/3rKT/97mW//e5lv/3rKT/96yk//e5lv/3uZb/97mW//e5lv/3rKT/96yk//e5lv/3uZb/98CP//fAj//3uZb/98CP//e5lv/3wI//97mW//fAj//3uZb/98CP//e5lv/3uZb/98CP//fAj//3uZb/98CP//e5lv/3wI//98CP//e5lv/3wI//97mW//espP/3uZb/96yk//e5lv/3wI//98CP//e5lv/3uZb/96yk//espP/3uZb/97mW//e5lv/3uZb/98CP//fAj//3rKT/96yk//e5lv/3uZb/97mW//espP/3uZb/96yk//espP/3rKT/97mW//e5lv/3wI//98CP//fAj//3wI//98CP//fAj//3wI//98CP//fAj//3wI//98CP//fAj/+XZYb/l/iL/5f4i/+X+Iv/l/iL/5dlhv+X+Iv/l/iL/5dlhv+XZYb/l/iL/5f4i/+X+Iv/l/iL/5dlhv+XZYb/l/iL/5f4i/+X+Iv/l2WG/5f4i/+X+Iv/l2WG/5f4i/+XwI//l8CP/5f0jf+X9I3/l/SN/5fAj/+X9I3/l8CP/5fAj/+XwI//l/SN/5f0jf+XwI//l/SN/5fAj/+X9I3/l/SN/5f0jf+XEoj/lxKI/5f0jf+X9I3/lxKI/5cSiP+X9I3/l/SN/5cSiP+XEoj/l/SN/5cSiP+X9I3/lxKI/5cSiP+XEoj/lxKI/5cSiP+X9I3/l/SN/5f4i/+X+Iv/l/iL/5f0jf+X9I3/l/iL/5f4i/+X+Iv/l/SN/5f0jf+X9I3/l/iL/5f4i/+X9I3/l/SN/5f4i/+X9I3/l/iL/5f0jf+X+Iv/l/SN/5f4i/+X9I3/l/SN/5f4i/+X+Iv/l/iL/5f0jf+X9I3/l/iL/5f0jf+X9I3/l/SN/5f0jf+X9I3/l/SN/5f0jf+X9I3/l/iL/5f4i/+X+Iv/l/iL/5f0jf+X9I3/l/SN/5f0jf+X9I3/l/SN//eYuf/3mLn/95i5//efsv/3n7L/95+y//efsv/3n7L/95+y//efsv/3n7L/96yk//espP/3rKT/96yk//espP/3rKT/96yk//espP/3uZb/97mW//e5lv/3wI//98CP//fAj//3wI//98CP//fAj/+X+Iv/l/iL/5f4i/+X+Iv/l/SN/5f0jf+X9I3/l/SN/5f0jf/3mLn/95i5//eYuf/3n7L/95+y//eYuf/3mLn/95+y//efsv/3n7L/95+y//efsv/3n7L/95+y//efsv/3rKT/96yk//espP/3rKT/96yk//espP/3rKT/97mW//e5lv/3uZb/97mW//e5lv/3uZb/97mW//fAj//3wI//98CP//e5lv/3uZb/98CP/5f4i/+X+Iv/l2WG/5f4i/+X+Iv/l2WG/5f4i/+X+Iv/l/iL/5dlhv+X+Iv/l/SN/5cSiP+X9I3/lxKI/5f0jf+X9I3/l/SN/5f0jf+X9I3/l/SN/5f0jf+X9I0="),
"format": 34896613399,
"index_count": 396,
"index_data": PackedByteArray("AgAAAAEAAQADAAIABgAEAAUABQAHAAYACgAIAAkACQALAAoADgAMAA0ADQAPAA4AEgAQABEAEQATABIAFgAUABUAFQAXABYAGgAYABkAGQAbABoAHgAcAB0AHQAfAB4AHQAgAB8AIAAhAB8AIAAiACEAIgAjACEAJgAkACUAJQAnACYAKgAoACkAKQArACoALgAsAC0ALQAvAC4AMgAwADEAMQAzADIANgA0ADUANQA3ADYAOgA4ADkAOQA7ADoAPgA8AD0APQA/AD4AQgBAAEEAQQBDAEIARgBEAEUARQBHAEYASgBIAEkASQBLAEoATgBMAE0ATQBPAE4AUgBQAFEAUQBTAFIAVgBUAFUAVQBXAFYAWgBYAFkAWQBbAFoAXgBcAF0AXQBfAF4AYgBgAGEAYQBjAGIAZgBkAGUAZQBnAGYAagBoAGkAaQBrAGoAbgBsAG0AbQBvAG4AcgBwAHEAcQBzAHIAdgB0AHUAdQB3AHYAegB4AHkAeQB7AHoAfgB8AH0AfQB/AH4AggCAAIEAgQCDAIIAhgCEAIUAhQCHAIYAigCIAIkAiQCLAIoAiQCMAIsAjACNAIsAjgCMAIkAiQCPAI4AjQCQAIsAjwCRAI4AjQCRAJAAjwCSAJEAkgCQAJEAkgCTAJAAlgCUAJUAmQCXAJgAnACaAJsAnwCdAJ4AogCgAKEApQCjAKQAqACmAKcAqwCpAKoArgCsAK0ArQCvAK4AsgCwALEAsQCzALIAtgC0ALUAtQC3ALYAugC4ALkAuQC7ALoAvgC8AL0AvQC/AL4AwgDAAMEAwQDDAMIAxgDEAMUAxQDHAMYAygDIAMkAyQDLAMoAzgDMAM0AzQDPAM4A0gDQANEA0QDTANIA1gDUANUA1wDVANQA2gDYANkA2QDbANoA3gDcAN0A3wDdANwA4gDgAOEA4QDjAOIA5gDkAOUA5wDlAOQA6gDoAOkA6QDrAOoA7gDsAO0A7wDtAOwA8gDwAPEA8ADzAPEA8gDxAPQA9QDxAPMA9AD2APIA9QDzAPcA9gD1APcA9wDyAPYA"),
"lods": [0.0302557, PackedByteArray("JwE2ATIBNgFHATIBSQE1AUcBNAFJAT0BPQEqATQBOgErAT0BKgE6ASwBLAE6AS4BLAEzASoBOwFAAS4BMwEtASkBKAEtAS8BLwE3ASgBPAE+AUEBQQE+AZEAPgGNAJEAWwCNAD8BjACNAFsARAGRAIwARAGMAFsAQgGRAEQBRAFbAEgBOAFGAUgBOQExAUYBMAFDAUUBnACaAJsA0ACbAJoAmgDaANAA2gCWAJUAlQDbANoA0QDbAKEAqADQANEAoQCgANEAogCgAKEA0QCmAKgAqACmAKcATgFMAU0BTQHWAE4BWgFOAdYASgFaAUsBWwFLAVoBWwFZAVAB1gBSAVkBUQFQAVkBUQFPAVABVAFZAVIBVAFSAVMBrgCxAK0ArgCwALEArQCvAK4AsQCwALYAtgCvAK0AtgC0ALEArQC0ALYAvgDAAL0AxgC9AMAAVwFWAVgBWAFWAVUBXQFfAVwB8gDxAPQA9AD2APIAYAFeAfYA9gD1APMA9QDxAPMA"), 0.0352713, PackedByteArray("AgENAQkBCgERAQMBAwERAQUBBgEOAQQBEgEVAQcBCwEYARMBGAEbARMBTwCRAIwAFgEUAR0BFAEcAR0BCAEXARkBDwEIARkBGgEMARABrgCxAK0ArgCwALEArQCvAK4AsQCwALYAtgCvAK0AtgC0ALEArQC0ALYAqADQANEAmgAiAdAA0QDbAKEAlQDbANoA1gAhAdUAIwHVACAB3AAfAdYAIwEeAdwAJAHxACYB9QDxACQB9gD1ACQBJgH2ACUB"), 0.070132, PackedByteArray("rQCvAK4AtgCvAK0ArgCwAK0ArQCwALYAqADQANEAmgDaANAA0QDbAKEAlQDbANoA1gD7ANUA/QDVAPoA/AD5ANYA/QD4APwA/gDxAAAB9QDxAP4AAQH1AP4AAAEBAf8A")],
"material": SubResource("StandardMaterial3D_xru77"),
"name": "colormap",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 353,
"vertex_data": PackedByteArray("QuvfIv9/L8bXy98iJzQE34HHAAD/f//Tj7IAAG9N6N1vTQAAb03o3Sc03yInNATffTgAAP9//9O8FN8i/38vxm9NAACPsvG9fTgAAP9/DsYnNN8i18tPqrwU3yL/f0PB/3/fIkLrI5n/fwAAgcfwsCc03yLXyymmb00AAI+yerRC698i/39DwYHHAAD/fw7G18vfItfLT6qPsgAAj7LxvdfL3yLXyymmj7IAAI+yerT/f98iQusjmf9/AACBx/Cw18vfIic0HuT/f98ivBRt/Y+yAABvTXzt/38AAH04//eBxwAA/3/CwY+yAABvTQ7Nj7IAAI+yvbT/fwAAgcfurv9/AAB9OBDRb00AAI+yvbRvTQAAb00OzX04AAD/f8LB/3/fIrwUbf0nNN8iJzQe5P9/AAB9OP/3b00AAG9NfO1C698i/39DwdfL3yLXy0+q//+daP9//7+B2p1ogdr/n/9/3yK8FG3918vfIic0HuT/f51oAAD//4HanWh9Jf/fgdqdaH0l/9/Xy98iJzQE3///nWj/f/+/QuvfIv9/L8YnNN8iJzQe5P9/3yK8FG39fSWdaH0l/9//f51oAAD//9fL3yLXyymm/3/fIkLrI5mB2p1ogdr/n/9/nWj//wCAfSWdaH0l/98AAJ1o/3//vyc03yInNATfvBTfIv9/L8a8FN8i/39DwQAAnWj/f/+/JzTfItfLT6p9JZ1ogdr/n/9/3yJC6yOZJzTfItfLKab/f51o//8AgH0lnWiB2v+ffSWdaH0l/9//f51oAAD//yc0XK4nNB7k/39crrwUbf3/f51o//8AgH0lnWiB2v+f/39crkLrI5knNFyu18spprwUXK7/f0PBJzRcrtfLT6oAAJ1o/3//v30lnWiB2v+f18tcrtfLKab/f1yuQusjmY+yO9GPsnq0/3870YHH8LDXy1yuJzQe5I+yO9FvTXzt/39crrwUbf3/fzvRfTj/9/9/XK68FG39/3870X04//cnNFyuJzQe5G9NO9FvTXztQutcrv9/Q8HXy1yu18tPqoHHO9H/fw7Gj7I70Y+y8b1C61yu/38vxoHHO9H/f//T18tcric0BN+PsjvRb03o3W9NO9GPsvG9JzRcrtfLT6p9ODvR/38OxrwUXK7/f0PBfSWdaH0l/98nNFyuJzQE3wAAnWj/f/+/vBRcrv9/L8ZvTTvRb03o3X04O9H/f//TJzRcric0BN+8FFyu/38vxoHanWiB2v+f/3+daP//AIDXy1yu18sppv9/XK5C6yOZ/39crkLrI5knNFyu18sppv9/O9GBx/Cwb0070Y+yerSB2p1ofSX/3///nWj/f/+/18tcric0BN9C61yu/38vxkLrXK7/f0PB//+daP9//7/Xy1yu18tPqoHanWiB2v+f/3+daAAA//+B2p1ofSX/3/9/XK68FG3918tcric0HuSBxzvR/3/584+yO9GPsvv4j7I70W9NbPb/fzvRfTj//9+RO9Efbv//H2470R9u///fkTvR35H///9/O9GBx///b0070W9NbPYfbjvR35H//29NO9GPsvv4fTg70f9/+fOjwf///39qxQSsIuQndGnKBKwi5NeLacoErCLk14ufHQSsIuQndJ8do8H///9/OBXXiyLkBKzvqid0IuQErO+q/3///6PBXp7/f///o8FeHid0IuQErO8q14si5ASs7yondCLk+lP//9eLIuT6U////3///1s+////f///Wz4AANeLIuT6UwAAJ3Qi5PpTAAD6UyLkJ3Rpyls+////f2rF+lMi5NeLacr6UyLk14ufHVs+////fzgV+lMi5Cd0nx3fkTvR35H/nx9uO9Hfkf+f35E02t+R/58fbjTa35H/n9+RNNofbv/f35E70R9u/9/fkTTa35H/n9+RO9Hfkf+fH2470R9u/9/fkTvRH27/3x9uNNofbv/f35E02h9u/98fbjvRH27/3x9uNNofbv/fH2470d+R/58fbjTa35H/n3WKNNp1im+hiXU02nWKb6FhhqL3YYZvoZ15ovdhhm+hdYo02ol1Y991ijTadYpfo2GGovedeWPfYYai92GGX6OJdTTaiXV14XWKNNqJdXXhnXmi9515deFhhqL3nXl14Yl1NNqJdWPfnXmi9515Y9+JdTTadYpfo515ovdhhl+jYYai9515//9hhqL3YYb//515ovedef//nXmi92GG//8fbjTa35F5zh9uNNofbnnO+lMi5NeLacr6UyLkJ3RpyvpTIuTXi58dH2402h9uDiMfbjTa35EOI/pTIuQndJ8dBKwi5NeLacoErCLkJ3Rpyt+RNNrfkXnO35E02h9uec7fkTTa35EOIwSsIuQndJ8dBKwi5NeLnx3fkTTaH24OI9+RNNofbv//14si5PpT//8fbjTaH27//yd0IuT6U///H2402h9uAADXiyLk+lMAAN+RNNofbgAAJ3Qi5PpTAADfkTTa35Fnsx9uNNrfkWez14si5ASs76ondCLkBKzvqteLIuQErO8qH2402t+RaDPfkTTa35FoMyd0IuQErO8qiXU02ol1//8fbjTaH27//3WKNNqJdf//iXU02nWK///fkTTaH27//x9uNNrfkf//35E02t+R//91ijTadYr//wSsIuQndO4t14si5ASsEkXXiyLk+lM+APpTIuTXi6gt35E02t+REC3fkTTaH24RK4l1NNp1iqr/iXU02nWK///fkTTaH25L/9+RNNrfkf//gccAAP9/L9SBxwAA/38h4YHHAAD/f2zJ/3/fIkLrM7P/f98iQusbrP9/3yJC63WW/3/fIkLrnZf/f98ivBSZ7P9/3yK8FP///3/fIrwUHPP/f98ivBR/8P//nWj/f9HJ//+daP9/Zbv//51o/399uf//nWj/f8LNAACdaP9/bswAAJ1o/38dtAAAnWj/fy7TAACdaP9/iMMnNFyu18vgnyc0XK7Xy9yvJzRcrtfL96PfkTvRH26U9N+RO9Efbv//35E70R9unu8fbjvRH25y8h9uO9Efbsr9H2470d+R//8ErCLkJ3QSLteLIuQErFBE14si5PpTAAD6UyLk14uFLd+RNNrfkd/M35E02h9u7yqJdTTadYqI/4l1NNp1iv//35E02h9u+f+BxwAA/3/u0YHHAAD/f2zPgccAAP9/ZOAnNN8iJzTy3ic03yInNNXXfTgAAP9/3tB9OAAA/3+k2/9/3yJC6yue/3/fIkLrZKz/f98iQuszif9/3yJC63iW/3/fIrwUy+n/f98ivBT///9/3yK8FHD4/3/fIrwUZPn//51o/38Vyv//nWj/f+q6//+daP9/VsP//51o/39ytQAAnWj/f4jCAACdaP9/rLUAAJ1o/3/zwCc0XK4nNIrlJzRcric0NuEnNFyuJzRe6ic0XK7Xy/6eJzRcrtfLYLUnNFyu18sItic0XK7Xy4mYj7I70Y+y/b6PsjvRj7I0mI+yO9GPsqer18tcric0seXXy1yuJzQX4f9/O9F9OMv4BKwi5NeLUjEErCLkJ3SZL/9///+jwT05J3Qi5ASsmUnXiyLkBKxySP9///9bPgAA14si5PpTBQAndCLk+lMaAPpTIuTXi5MwWz7///9/bzb6UyLkJ3QmMol1NNp1ilO4YYai92GGN8d1ijTaiXUA4515ovedeQHsH2402h9ueCrfkTTa35HpLd+RNNofbk8rH2402h9u+PN1ijTaiXW2+XWKNNqJdeb7iXU02nWKOfeJdTTadYr//21xsi6ZazAqTGfERLtia0KUPbvizlWZ6zs7S+dMUWzxxSvh0L0zIc9qPZrdUU+B3pkJ8qn7D5ioVUJPxCsiIKyBXq4wIU9CTJpdlULiUDlUT0SpPSEs013zKWZ2mCgDcO9+JSHbdRslEnrQNzlzJDoXE9FZ/goEZgYTA18AAP9/AAD/f/wgBpP6Gf2KLiYWk+Na2/XZXu/+20U48y5IEvqBXq4wml2VQv9/AAD/fwAA23UbJe9+JSH/f////38AAP9/AACZazAq/38AAG1xsi7ZXu/+41rb9f9/////f///T0SpPfMpZnb/fwAA/3////9/////f///zlWZ60xRbPFRT4He/3///2o9mt3/f///mQnyqVVCT8T/f////3////9/////f///D4HZ3iOK49r/f////3///wvWmImvu1XCfaFQz2Siab3/f////3///6m9rztl9gxW093eUwPwZlcloQ8B0LfsBRulIwojusYMI4rj2sWM2sUPgdne7IUuyK2wfSGUwmQiQczdMDnUHS+yrpIOw8SzGDCqZRRqwkMdHK/Fq2Siab3dsLyzfaFQz/9///9llM7V/3///5GOTNFDnZO9spg6u2WUztWRjkzR/38AAP9///+pva87ZfYMVgvWmImvu1XCZtf7j93TK6L/fwAA/38AADCqZRSyrpIOrbB9If9/AACUwmQi/38AAP9/////fwAAG6UjCiWhDwHZOUsM7jH/CYNFfQf/f5nN/3//v/9//7//f/+//39ksoF4g8X/f/+//3XusbNz2bnqYyo4lF3WRJRd1kQm45MxJuOTMRDriDUAAP9/AAD/fwAA/3////9/////f////38Tr///E6////mj////f/mj/38Tr/9/E68oO5Pd1Efp4yg7k92TsdeciLXtlJOx15z/fwAA/3////9/AAD/f////38AAP9/AAD/fwAA/38AAP9/////fwAA/3////9/AAD/f////3////9/////f///86AbLhuuCt/zoBsuG64K3+aXuBCYrGUN5pe4EJisZQ1LeYHogmizBkt5geiCaLMGuJAY6LiQGOhljWbTZY1m0/9//7//f/+//3//v/9//78DNADaAzQA2ig7k90oO5Pdk7HXnOCuPaLgrj2ik7HXnJRd1kSUXdZEAVr8SwFa/EvB3eAuJuOTMSbjkzHB3eAuB7b//xOv//8Htv//E6////9/B7b/fxOv/38Htv9/E68AAP9/AAD/fwAA/38AAP9/////f////3////9/////f/9//7//f/+//3//v/9//7//f/+//3//v/9//7//f/+/ENAFKP///3+cfmMBqaiqronTwCkt044pcXxx/M90MAubemMFY3qcBcdt4TYtXrtX9m9AOsMONKHGGoZQvz7x3z7q8k/qhCMKMaBw7HybB+uIZagS8WhfL/FoHzDUtB8YC6OgD043ptvbc4v6vpCD1AiczsdcpJ7tPLvEvZ7OW6qWc5Xz1W8pELttRBJodGj0MGov6l9lXuUz0Bgoqf+qf/F/DgCvqJ6uf1c/VJLTwinBecD5O3/EAMF/PgCscYQu+mh/RcdhiFGeVYfrNHMl8AhGdewsL2HhDjBryW0LH1+A4EveOjq0GRN4jAwflfHnbKDP1K9oJQrJcgQcKGnwLxqqCRVVkIQHT2As8NBzWvoSkdfddXm57FmE1c7Di2a+458h9wjAObUezQSkdMSKxzrn/lkC035YzMT8QE5pBAQNrPkCLaheBQLO+iaEzkInoP+hf9//HoCr/6x/xH/D/+V/5f+Df4P/bKYiszehjr28pHy2LMVGrerfBEyVt/wXSJJsraGpnKyZ0kcpp9PRKelo6Oh5cXnxI13bIn9cftzydAwL")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_2rcrt")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_75vg6"]
radius = 0.25
height = 0.75

[node name="EnemyStateTest02" instance=ExtResource("1_2xcuc")]
collision_layer = 2
collision_mask = 3
script = ExtResource("2_ughar")
LifeTime = 30.0
hurt_particle = ExtResource("3_ijtr6")
blood_trail = ExtResource("4_6fqyk")
hit_flash_material = ExtResource("5_nnl5c")
FloatingText = ExtResource("6_2x2sf")

[node name="character-skeleton" parent="." index="0"]
transform = Transform3D(-0.999753, 0, 0.0222194, 0, 1, 0, -0.0222194, 0, -0.999753, 0, 0, 0)

[node name="leg-right" parent="character-skeleton/root" index="1"]
transform = Transform3D(0.8584, 0, 0, 0, 0.8584, 0, 0, 0, 0.858399, -0.074204, 0.223184, 0)

[node name="torso" parent="character-skeleton/root" index="2"]
transform = Transform3D(1, 0, 1.86265e-09, 0, 1, 0, -1.86265e-09, 0, 1, 0, 0.223184, 0)

[node name="arm-left" parent="character-skeleton/root/torso" index="0"]
transform = Transform3D(0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0, 1, 0.15, 0.225, 0.0025)

[node name="arm-right" parent="character-skeleton/root/torso" index="1"]
transform = Transform3D(0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, -0.15, 0.225, 0.0025)

[node name="head" parent="character-skeleton/root/torso" index="2"]
transform = Transform3D(1, 0, 1.86265e-09, 0, 1, 0, -1.86265e-09, 0, 1, 0, 0.26, 0)
visible = false

[node name="tomato" type="MeshInstance3D" parent="character-skeleton/root/torso" index="3"]
transform = Transform3D(-2.99926, 0, -0.0666582, 0, 3, 0, 0.0666582, 0, -2.99926, 0, 0.29926, 0)
mesh = SubResource("ArrayMesh_dukcy")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.382437, 0)
shape = SubResource("CapsuleShape3D_75vg6")

[node name="StateChart" type="Node" parent="." index="3"]
script = ExtResource("6_ui25h")

[node name="ParallelState" type="Node" parent="StateChart" index="0"]
script = ExtResource("4_bvk6h")

[node name="Movement" type="Node" parent="StateChart/ParallelState" index="0"]
script = ExtResource("7_8rdi8")
initial_state = NodePath("IDLE")

[node name="IDLE" type="Node" parent="StateChart/ParallelState/Movement" index="0"]
script = ExtResource("8_1qtkq")

[node name="to chase" type="Node" parent="StateChart/ParallelState/Movement/IDLE" index="0"]
script = ExtResource("9_uv1e1")
to = NodePath("../../CHASE")
event = &"to_chase"
delay_in_seconds = "0.0"

[node name="CHASE" type="Node" parent="StateChart/ParallelState/Movement" index="1"]
script = ExtResource("8_1qtkq")

[node name="to idle" type="Node" parent="StateChart/ParallelState/Movement/CHASE" index="0"]
script = ExtResource("9_uv1e1")
to = NodePath("../../IDLE")
event = &"to_idle"
delay_in_seconds = "0.0"

[node name="to attack" type="Node" parent="StateChart/ParallelState/Movement/CHASE" index="1"]
script = ExtResource("9_uv1e1")
to = NodePath("../../ATTACK")
event = &"to_attack"
delay_in_seconds = "0.1"

[node name="ATTACK" type="Node" parent="StateChart/ParallelState/Movement" index="2"]
script = ExtResource("8_1qtkq")

[node name="to idle" type="Node" parent="StateChart/ParallelState/Movement/ATTACK" index="0"]
script = ExtResource("9_uv1e1")
to = NodePath("../../CHASE")
event = &"to_idle"
delay_in_seconds = "0.0"

[node name="Health" type="Node" parent="StateChart/ParallelState" index="1"]
script = ExtResource("7_8rdi8")
initial_state = NodePath("UNHURT")

[node name="UNHURT" type="Node" parent="StateChart/ParallelState/Health" index="0"]
script = ExtResource("8_1qtkq")

[node name="to hurt" type="Node" parent="StateChart/ParallelState/Health/UNHURT" index="0"]
script = ExtResource("9_uv1e1")
to = NodePath("../../HURT")
event = &"to_hurt"
delay_in_seconds = "0.0"

[node name="to dead" type="Node" parent="StateChart/ParallelState/Health/UNHURT" index="1"]
script = ExtResource("9_uv1e1")
to = NodePath("../../DEAD")
event = &"to_dead"
delay_in_seconds = "0.0"

[node name="HURT" type="Node" parent="StateChart/ParallelState/Health" index="1"]
script = ExtResource("8_1qtkq")

[node name="to unhurt" type="Node" parent="StateChart/ParallelState/Health/HURT" index="0"]
script = ExtResource("9_uv1e1")
to = NodePath("../../UNHURT")
event = &"to_unhurt"
delay_in_seconds = "0.0"

[node name="to dead" type="Node" parent="StateChart/ParallelState/Health/HURT" index="1"]
script = ExtResource("9_uv1e1")
to = NodePath("../../DEAD")
event = &"to_dead"
delay_in_seconds = "0.0"

[node name="DEAD" type="Node" parent="StateChart/ParallelState/Health" index="2"]
script = ExtResource("8_1qtkq")

[node name="HealthComponent" parent="." index="4" instance=ExtResource("10_n66am")]
max_health = 4.0

[node name="BloodTarilPos" type="Marker3D" parent="." index="5"]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 0, 0.0245163, 0.337645)

[node name="NormalItemSpwaner" parent="." index="6" instance=ExtResource("11_va31a")]
Item = ExtResource("12_vl4jd")

[node name="Lifetimer" type="Timer" parent="." index="7"]

[node name="FloatingTextPos" type="Marker3D" parent="." index="8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.08912, 0)

[node name="AlertMarker" type="Sprite3D" parent="." index="9"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 1.233, 0)
visible = false
billboard = 1
texture_filter = 2
texture = ExtResource("16_neymm")

[node name="EnemyAttack" type="Node3D" parent="." index="10"]

[node name="HitPlayerRayCast" type="RayCast3D" parent="EnemyAttack" index="0"]
transform = Transform3D(0.6, 0, 0, 0, -2.62268e-08, -0.6, 0, 0.6, -2.62268e-08, 0, 0.14102, 0)
enabled = false
script = ExtResource("18_ejus3")

[connection signal="state_physics_processing" from="StateChart/ParallelState/Movement/IDLE" to="." method="_on_idle_state_physics_processing"]
[connection signal="state_entered" from="StateChart/ParallelState/Movement/CHASE" to="." method="_on_chase_state_entered"]
[connection signal="state_physics_processing" from="StateChart/ParallelState/Movement/CHASE" to="." method="_on_chase_state_physics_processing"]
[connection signal="state_entered" from="StateChart/ParallelState/Movement/ATTACK" to="." method="_on_attack_state_entered"]
[connection signal="state_exited" from="StateChart/ParallelState/Movement/ATTACK" to="." method="_on_attack_state_exited"]
[connection signal="state_physics_processing" from="StateChart/ParallelState/Movement/ATTACK" to="." method="_on_attack_state_physics_processing"]
[connection signal="state_entered" from="StateChart/ParallelState/Health/UNHURT" to="." method="_on_unhurt_state_entered"]
[connection signal="state_entered" from="StateChart/ParallelState/Health/HURT" to="." method="_on_hurt_state_entered"]
[connection signal="state_physics_processing" from="StateChart/ParallelState/Health/HURT" to="." method="_on_hurt_state_physics_processing"]
[connection signal="state_entered" from="StateChart/ParallelState/Health/DEAD" to="." method="_on_dead_state_entered"]
[connection signal="timeout" from="Lifetimer" to="." method="_on_lifetime_timeout"]
